[package]
name = "xdp-drop-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya"}
xdp-drop-common = { path = "../xdp-drop-common", features = ["user"] }
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt"] }
bytes = "1"
env_logger = "0.10"

[[bin]]
name = "xdp-drop-wasm"
path = "src/main.rs"
